# tolerancing

./: .gitignore  CLAUDE.md  pyproject.toml  test_geometry.py
data/: flatness_analysis_results.csv  flatness_analysis_results.summary.csv  monte_carlo_results.csv  monte_carlo_results.summary.csv  multi_measurement_test.csv  tilted_stack_test_results.csv  tilted_stack_test_results.summary.csv
examples/: assembly_mating_example.py  datum_building_example.py  flatness_tolerance_example.py  monte_carlo_analysis.py  optical_lens_mount.py  simple_monte_carlo_test.py  test_multi_measurements.py  tilted_stack_test.py  tolerance_stackup_analysis.py  tolerance_stackup_analysis_mine.py
scripts/: demo_component_display.py  test.py  test_component_debug.py  test_component_refactor.py  test_geo_engine.py  test_refactored.py  test_tree_display.py
tolerancing/: __init__.py  assembly.py  component.py  datum.py  form.py  geometry.py  monte_carlo.py  transformations.py
tolerancing/geometry/: __init__.py  axis.py  cylinder.py  factory.py  geometry.py  plane.py  point.py
