[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tolerancing"
version = "0.1.0"
description = "automatic tolerancing!"
authors = [{name = "gront", email = "gront@gront.com"}]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["tolerancing*"]
